--- a/我的收入.html
+++ b/我的收入.html
@@ -1293,6 +1293,46 @@
       <!-- Unnamed (热区) -->
       <div id="u184" class="ax_default">
       </div>
+
+      <!-- Unnamed (气泡) -->
+      <div id="u185" class="ax_default box_1">
+        <img id="u185_img" class="img " src="images/首页/u108.png"/>
+        <!-- Unnamed () -->
+        <div id="u186" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- 交互1 (矩形) -->
+      <div id="u187" class="ax_default box_1" data-label="交互1">
+        <div id="u187_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u188" class="text">
+          <p><span>1</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (组合) -->
+      <div id="u189" class="ax_default" data-left="442" data-top="86" data-width="272" data-height="96">
+
+        <!-- Unnamed (矩形) -->
+        <div id="u190" class="ax_default box_1">
+          <div id="u190_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u191" class="text">
+            <p><span>1</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u192" class="ax_default box_1">
+          <div id="u192_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u193" class="text">
+            <p><span>可以上下滑动，滑动时此处有交互效果</span></p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
