增添提现功能

--- a/月收入.html
+++ b/月收入.html
@@ -202,75 +202,93 @@
         </div>
       </div>
 
+      <!-- Unnamed (热区) -->
+      <div id="u266" class="ax_default">
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u267" class="ax_default box_1">
+        <div id="u267_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u268" class="text">
+          <p><span>提现</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u269" class="ax_default label">
+        <div id="u269_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u270" class="text">
+          <p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">红包收入由妙境界公司提供，可在APP中直接提现；提成收入由店长提供，提现事宜请联系您的店长</span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;"><br></span></p><p><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"><br></span></p>
+        </div>
+      </div>
+
       <!-- 时间选择器 (组合) -->
-      <div id="u266" class="ax_default ax_default_hidden" data-label="时间选择器" style="display:none; visibility: hidden" data-left="0" data-top="0" data-width="0" data-height="0">
+      <div id="u271" class="ax_default ax_default_hidden" data-label="时间选择器" style="display:none; visibility: hidden" data-left="0" data-top="0" data-width="0" data-height="0">
 
         <!-- Unnamed (矩形) -->
-        <div id="u267" class="ax_default box_1">
-          <div id="u267_div" class=""></div>
+        <div id="u272" class="ax_default box_1">
+          <div id="u272_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u268" class="text" style="display:none; visibility: hidden">
+          <div id="u273" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u269" class="ax_default box_1 selected" selectiongroup="tab-basic-bnt">
-          <div id="u269_div" class="selected"></div>
+        <div id="u274" class="ax_default box_1 selected" selectiongroup="tab-basic-bnt">
+          <div id="u274_div" class="selected"></div>
           <!-- Unnamed () -->
-          <div id="u270" class="text">
+          <div id="u275" class="text">
             <p><span>选择日期</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u271" class="ax_default box_1">
-          <div id="u271_div" class=""></div>
+        <div id="u276" class="ax_default box_1">
+          <div id="u276_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u272" class="text">
+          <div id="u277" class="text">
             <p><span>取消</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u273" class="ax_default box_1">
-          <div id="u273_div" class=""></div>
+        <div id="u278" class="ax_default box_1">
+          <div id="u278_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u274" class="text">
+          <div id="u279" class="text">
             <p><span style="color:#999999;"><br></span></p><p><span style="color:#999999;"><br></span></p><p><span style="color:#999999;">2016年</span></p><p><span style="color:#666666;">2017年</span></p><p><span style="color:#999999;">2018年</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u275" class="ax_default box_1">
-          <div id="u275_div" class=""></div>
+        <div id="u280" class="ax_default box_1">
+          <div id="u280_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u276" class="text">
+          <div id="u281" class="text">
             <p><span>确定</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u277" class="ax_default box_1">
-          <div id="u277_div" class=""></div>
+        <div id="u282" class="ax_default box_1">
+          <div id="u282_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u278" class="text">
+          <div id="u283" class="text">
             <p><span style="color:#CCCCCC;">1月</span></p><p><span style="color:#999999;">2月</span></p><p><span style="color:#999999;">3月</span></p><p><span style="color:#666666;">4月</span></p><p><span style="color:#999999;">5月</span></p><p><span style="color:#999999;">6月</span></p><p><span style="color:#CCCCCC;">7月</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u279" class="ax_default box_1 selected" selectiongroup="tab-basic-bnt">
-          <div id="u279_div" class="selected"></div>
+        <div id="u284" class="ax_default box_1 selected" selectiongroup="tab-basic-bnt">
+          <div id="u284_div" class="selected"></div>
           <!-- Unnamed () -->
-          <div id="u280" class="text" style="display:none; visibility: hidden">
+          <div id="u285" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
-      </div>
-
-      <!-- Unnamed (热区) -->
-      <div id="u281" class="ax_default">
       </div>
     </div>
   </body>
