--- a/我的收入主页.html
+++ b/我的收入主页.html
@@ -1566,7 +1566,7 @@
         <div id="u1011_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1012" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">筛选</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">筛选</span></p>
         </div>
       </div>
 
@@ -1602,7 +1602,7 @@
               <div id="u1019_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u1020" class="text">
-                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">“收银”需求文档</span></p>
+                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">“收银”需求文档</span></p>
               </div>
             </div>
 
