--- a/首页.html
+++ b/首页.html
@@ -64,7 +64,7 @@
         <div id="u781_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u782" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">首页</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">首页</span></p>
         </div>
       </div>
 
@@ -205,7 +205,7 @@
           <div id="u812_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u813" class="text">
-            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">我的预约</span></p>
+            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">我的预约</span></p>
           </div>
         </div>
       </div>
@@ -227,7 +227,7 @@
           <div id="u817_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u818" class="text">
-            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">我的收入</span></p>
+            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">我的收入</span></p>
           </div>
         </div>
       </div>
@@ -249,7 +249,7 @@
           <div id="u822_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u823" class="text">
-            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">大师讲堂</span></p>
+            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">大师讲堂</span></p>
           </div>
         </div>
       </div>
@@ -271,7 +271,7 @@
           <div id="u827_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u828" class="text">
-            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">妙境界</span></p>
+            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">妙境界</span></p>
           </div>
         </div>
       </div>
@@ -293,7 +293,7 @@
           <div id="u832_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u833" class="text">
-            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">电子画册</span></p>
+            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">电子画册</span></p>
           </div>
         </div>
       </div>
@@ -315,7 +315,7 @@
           <div id="u837_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u838" class="text">
-            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">买买买</span></p>
+            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">买买买</span></p>
           </div>
         </div>
       </div>
@@ -343,7 +343,7 @@
         <div id="u843_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u844" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">直播</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">直播</span></p>
         </div>
       </div>
 
@@ -491,7 +491,7 @@
               <div id="u876_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u877" class="text">
-                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">“收银”需求文档</span></p>
+                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">“收银”需求文档</span></p>
               </div>
             </div>
 
