--- a/流水详情页.html
+++ b/流水详情页.html
@@ -64,7 +64,7 @@
         <div id="u1185_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1186" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">收入详情</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">收入详情</span></p>
         </div>
       </div>
 
@@ -113,7 +113,7 @@
         <div id="u1196_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1197" class="text">
-          <p style="font-size:14px;"><span style="font-family:'微软雅黑 Bold', '微软雅黑';font-weight:700;color:#666666;">染发-法国双染</span></p><p style="font-size:12px;"><span style="font-family:'微软雅黑';font-weight:400;color:#999999;">￥1380.00✖1</span></p>
+          <p style="font-size:14px;"><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';font-weight:700;color:#666666;">染发-法国双染</span></p><p style="font-size:12px;"><span style="font-family:'微软雅黑';font-weight:400;color:#999999;">￥1380.00✖1</span></p>
         </div>
       </div>
 
@@ -207,7 +207,7 @@
         <div id="u1217_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1218" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">1</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">1</span></p>
         </div>
       </div>
 
@@ -219,7 +219,7 @@
           <div id="u1220_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u1221" class="text">
-            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">1</span></p>
+            <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">1</span></p>
           </div>
         </div>
 
@@ -270,7 +270,7 @@
               <div id="u1231_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u1232" class="text">
-                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">“收银”需求文档</span></p>
+                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">“收银”需求文档</span></p>
               </div>
             </div>
 
