--- a/筛选结果页.html
+++ b/筛选结果页.html
@@ -64,7 +64,7 @@
         <div id="u1146_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1147" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">2017-04-04至2017-04-04</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">2017-04-04至2017-04-04</span></p>
         </div>
       </div>
 
@@ -568,7 +568,7 @@
               <div id="u1167_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u1168" class="text">
-                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">“收银”需求文档</span></p>
+                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">“收银”需求文档</span></p>
               </div>
             </div>
 
