--- a/筛选页.html
+++ b/筛选页.html
@@ -118,7 +118,7 @@
               <div id="u1048_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u1049" class="text">
-                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">取消</span></p>
+                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">取消</span></p>
               </div>
             </div>
           </div>
@@ -688,7 +688,7 @@
               <div id="u1081_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u1082" class="text">
-                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">“收银”需求文档</span></p>
+                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">“收银”需求文档</span></p>
               </div>
             </div>
 
