--- a/选择时间页.html
+++ b/选择时间页.html
@@ -64,7 +64,7 @@
         <div id="u1099_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1100" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">选择时间</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">选择时间</span></p>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
         <div id="u1101_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1102" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">完成</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">完成</span></p>
         </div>
       </div>
 
@@ -82,7 +82,7 @@
         <div id="u1103_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1104" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">取消</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">取消</span></p>
         </div>
       </div>
 
@@ -91,7 +91,7 @@
         <div id="u1105_div" class="selected"></div>
         <!-- Unnamed () -->
         <div id="u1106" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';text-decoration:underline;">2017-04-04</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';text-decoration:underline;">2017-04-04</span></p>
         </div>
       </div>
 
@@ -109,7 +109,7 @@
         <div id="u1109_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1110" class="text">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';text-decoration:underline;">2017-04-04</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';text-decoration:underline;">2017-04-04</span></p>
         </div>
       </div>
 
@@ -195,7 +195,7 @@
               <div id="u1128_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u1129" class="text">
-                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';">“收银”需求文档</span></p>
+                <p><span style="font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';">“收银”需求文档</span></p>
               </div>
             </div>
 
