--- a/筛选页.html
+++ b/筛选页.html
@@ -125,6 +125,9 @@
         </div>
       </div>
 
+      <!-- 搜索栏 (动态面板) [footnote] -->
+      <div id="u1037_ann" class="annotation"></div>
+
       <!-- 选择时间 (组合) -->
       <div id="u1050" class="ax_default" data-label="选择时间" data-left="20" data-top="269" data-width="375" data-height="45">
 
